<resources>
    <string name="app_name">CubingTime</string>
    <string name="app_version">v0.2.8a</string>
    <string name="navigation_drawer_open">navigation drawer open</string>
    <string name="navigation_drawer_close">navigation drawer close</string>

    <string name="activity_auth_input_email_hint">Email</string>
    <string name="activity_auth_input_pass_hint">password</string>
    <string name="activity_auth_button_sign_in_hint">Sign in</string>
    <string name="activity_auth_button_sign_up_hint">Sign up</string>
    <string name="activity_auth_progress_dialog_sign_in_title">Sign in…</string>


    <string name="activity_profile_profilename_title">Unknown Unknown</string>
    <string name="activity_profile_user_info_title_default">Not indicated</string>
    <string name="activity_profile_user_friends_default_hint">Friends\u0020</string>
    <string name="activity_profile_user_friends_default_value_0">0</string>
    <string name="activity_profile_activity_title_default">offline</string>
    <string name="fragment_chat_room_footer_space_input_message_text">Start typing...</string>
    <string name="list_item_more_title">Show all...</string>
    <string name="activity_more_info_my_profile_wall_note_item_no_comments_title">No comments yet</string>


    <!-- menu_more_features_chat_item -->
    <string name="menu_more_features_chat_item_update">Refresh</string>
    <string name="menu_more_features_chat_item_delete">Delete this dialog</string>
    <!-- menu_more_features_chat_item -->

    <!-- menu_more_features_solve_item -->
    <string name="menu_more_features_solve_item_plus_two">+2</string>
    <string name="menu_more_features_solve_item_dnf">DNF</string>
    <string name="menu_more_features_solve_item_delete">Delete</string>
    <!-- menu_more_features_solve_item -->

</resources>