<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.litosh.ilya.cubingtimeproj.authactivity.ui.AuthActivity"
    android:background="@color/colorBackground">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/ic_logo"/>
        <android.support.v7.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:id="@+id/activity_auth_input_email"
            android:background="@drawable/ic_input_background"
            android:maxLength="36"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp"
            android:hint="@string/activity_auth_input_email_hint"/>
        <android.support.v7.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:id="@+id/activity_auth_input_pass"
            android:background="@drawable/ic_input_background"
            android:maxLength="36"
            android:maxLines="1"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp"
            android:hint="@string/activity_auth_input_pass_hint"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp">

            <android.support.v7.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/activity_auth_button_sign_in"
                android:layout_margin="5dp"
                android:textColorHint="@color/colorTextLabel"
                android:textSize="16sp"
                android:background="@drawable/ic_button_background"
                android:hint="@string/activity_auth_button_sign_in_hint"/>
            <android.support.v7.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/activity_auth_button_sign_up"
                android:textColorHint="@color/colorTextLabel"
                android:textSize="16sp"
                android:background="@drawable/ic_button_background"
                android:layout_margin="5dp"
                android:hint="@string/activity_auth_button_sign_up_hint"/>

        </LinearLayout>

    </LinearLayout>

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="5dp"
        android:layout_marginEnd="5dp"
        android:hint="@string/app_version"/>

</RelativeLayout>
